--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: information
-          image: 496278789073.dkr.ecr.ap-northeast-1.amazonaws.com/skccuser02-information:v1
+          image: 496278789073.dkr.ecr.us-west-2.amazonaws.com/skccuser14-information:v1
           ports:
             - containerPort: 8080
           readinessProbe:
